discussion/kv_engine/165101/165101_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49348: Fix race in time based CAS

Two racing threads can currently receive the same CAS value when
attempting to generate a new CAS. Currently this can only be done
for different documnets as we always call this while holding a
HashBucketLock. Correct this race by checking the result of a
compare_exchange_strong when using the real clock based CAS and
repeating the CAS generation if not successful.

Change-Id: Ia4d0109065b4435bf21658d446a2710e124b5562

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 16:28:07.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 16:53:54.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13811/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10: error: "folly/Portability/Gtest.h" file not found [clang-diagnostic-error]
#include <folly/Portability/Gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13811/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
error: "folly/Portability/Gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13811/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3443/ : FAILURE

Compile error at [2021-11-04T16:33:57.765Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3443/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15424/ : FAILURE

Compile error at [2021-11-04T16:33:50.047Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15424/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15707/ : FAILURE

Compile error at [2021-11-04T16:38:48.455Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15707/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16391/ : FAILURE

Compile error at [2021-11-04T16:34:16.997Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16391/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23762/ : FAILURE

Compile error at [2021-11-04T16:43:40.766Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/Portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23762/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3515/ : FAILURE

Compile error at [2021-11-04T16:35:33.222Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/Portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3515/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35293/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41565/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12612/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14586/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
